src/app/components/shared/sidebar/sidebar.component.scss
@import "src/theme/mixins";
@import "src/theme/text";

.menu-col {
  @include menu-column;
  z-index: 4;
}

.nav-screen {
  @include offset(fixed, xl, 0, null, null, $sidebar-width);
  @include width-height(calc(100vw - #{$sidebar-width}), 100vh);
}

:host {
  &.nav-menu {
    @include offset(fixed, xl);
    @include width-height($sidebar-width, 100vh);
    border-right: 0.2rem solid rgb(82, 82, 82);
    background-color: rgba(0, 0, 0, .2);
    transform: translateX(-15rem);
    transition: transform 1s, background-color 1s;
  }

  &.open-menu {
    background-color: rgba(0, 0, 0, .8);
    transform: translateX(0rem);
    transition: transform 1s, background-color 1s;
  }

  & ::ng-deep li {
    width: 80%;
    text-align: center;
    padding: 2rem 0;
    border-bottom: 0.2rem solid rgb(82, 82, 82);
    z-index: 4;


    &:last-child {
      border-bottom: none;
    }

    .menu-col {
      @include menu-column;
      z-index: 4;

    }

    .menu-name {
      text-decoration: none;
      color: white;
      font-size: 2.5rem;
      cursor: pointer;

      &--sub {
        @extend .menu-name;
        font-size: 1.5rem;
      }
    }

    .active {
      color: $brand-6;
    }
  }
}

